implantado métodos http(GET, POST, PUT, DELETE) angular

--- a/frontend/src/app/edit-user/edit-user.component.html
+++ b/frontend/src/app/edit-user/edit-user.component.html
@@ -1,1 +1,5 @@
-<app-form></app-form>
+<div class="container">
+    <app-carousel></app-carousel>
+    <app-form></app-form>
+    <router-outlet></router-outlet> 
+</div>
