--- a/frontend/src/app/form/form.component.html
+++ b/frontend/src/app/form/form.component.html
@@ -41,6 +41,7 @@
       <button type="button" (click)="addTelephone()">Adicionar</button>
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-outline-success" [disabled]="!form.valid" (click)="onSubmit()">Success</button>
+    <button type="submit" class="btn btn-outline-success"  [disabled]="!form.valid" (click)="onSubmit()">Success</button>
+    <button type="submit" class="btn btn-outline-success">Cancel</button>
   </div>
 </form>
