--- a/frontend/src/app/list-users/list-users.component.html
+++ b/frontend/src/app/list-users/list-users.component.html
@@ -1,33 +1,47 @@
-<div class="container">
-    <span>Tabela de Usuários</span>
-    <table border="1">
+<div class="card mt-3">
+    <div class="card-header">
+      <div class="float-left">
+        <h4>Cursos</h4>
+      </div>
+      <div class="float-right">
+        <button type="button" class="btn btn-primary" [routerLink]="['/add-user']">Novo Curso</button>
+        <button type="button" class="btn btn-secondary">Atualizar</button>
+      </div>
+    </div>
+    <div class="card-body">
+      <table class="table table-hover" *ngIf="users$ | async as users">
         <thead>
-            <tr>
-                <td>Nome</td>
-                <td>CPF ou CNPJ</td>
-                <td>Endereço</td>
-                <td>Telefone</td>
-            </tr>
+          <tr>
+            <th>id</th>
+            <th>Nome</th>
+            <th>CPF</th>
+            <th>CNPJ</th>
+            <th>Endereço</th>
+            <th>Telefone</th>
+            <th></th>
+          </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Marcos</td>
-                <td>113.697.169-66</td>
-                <td>Estrada geral</td>
-                <td>996003423</td>
-            </tr>
-            <tr>
-                <td>Marcos</td>
-                <td>113.697.169-66</td>
-                <td>Estrada geral</td>
-                <td>996003423</td>
-            </tr>
-            <tr>
-                <td>Marcos</td>
-                <td>113.697.169-66</td>
-                <td>Estrada geral</td>
-                <td>996003423</td>
-            </tr>
+          <tr  *ngFor="let user of users">
+            <td> {{ user.id }} </td>
+            <td> {{ user.name }} </td>
+            <td> {{ user.cpf }} </td>
+            <td> {{ user.cnpj }} </td>
+            <td> {{ user.address }} </td>
+            <td> {{ user.telephone }} </td>
+            <td>
+              <span class="float-right">
+                <button class="btn btn-outline-warning mb-1 btn-sm">
+                  Atualizar
+                </button>
+  
+                <button class="btn btn-outline-danger mb-1 btn-sm">
+                  Remover
+                </button>
+              </span>
+            </td>
+          </tr>
         </tbody>
-    </table>
-</div>
+      </table>
+    </div>
+  </div>
