--- a/frontend/src/app/list-users/list-users.component.html
+++ b/frontend/src/app/list-users/list-users.component.html
@@ -1,24 +1,33 @@
 <div class="card mt-3">
     <div class="card-header">
       <div class="float-left">
-        <h4>Cursos</h4>
+        <h4>Usuários</h4>
       </div>
       <div class="float-right">
-        <button type="button" class="btn btn-primary" [routerLink]="['/add-user']">Novo Curso</button>
-        <button type="button" class="btn btn-secondary">Atualizar</button>
+        <button type="button" class="btn btn-primary" [routerLink]="['/add-user']">Novo Usuário</button>{{' '}}
+        <button type="button" class="btn btn-secondary" (click)="onLoadAllUsers()">Carregar Usuários</button>{{''}}
+        <button type="button" class="btn btn-secondary" (click)="onFindUserById()">Pesquisar</button>
       </div>
     </div>
     <div class="card-body">
-      <table class="table table-hover" *ngIf="users$ | async as users">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th>id</th>
             <th>Nome</th>
             <th>CPF</th>
             <th>CNPJ</th>
-            <th>Endereço</th>
-            <th>Telefone</th>
-            <th></th>
+            <th>Endereços</th>
+            <th>Telefones</th>
+            <th colspan="2">
+              <input 
+                type="text" 
+                class="form-control" 
+                id="id_user" 
+                placeholder="Pesquisa por id"
+                required
+                (keyup)="onKeyPress($event)">
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -27,18 +36,25 @@
             <td> {{ user.name }} </td>
             <td> {{ user.cpf }} </td>
             <td> {{ user.cnpj }} </td>
-            <td> {{ user.address }} </td>
-            <td> {{ user.telephone }} </td>
             <td>
-              <span class="float-right">
-                <button class="btn btn-outline-warning mb-1 btn-sm">
-                  Atualizar
-                </button>
-  
-                <button class="btn btn-outline-danger mb-1 btn-sm">
-                  Remover
-                </button>
-              </span>
+              <div *ngFor="let address of user.address">
+                {{ address.description }}
+              </div>
+            </td>
+            <td>
+               <div *ngFor="let telephone of user.telephone">
+                  {{ telephone }}
+               </div> 
+            </td>
+            <td>
+              <button class="btn btn-outline-warning mb-1 btn-sm" [routerLink]="['/edit-user/', user.id]">
+              Atualizar
+              </button>
+            </td>
+            <td>
+              <button class="btn btn-outline-danger mb-1 btn-sm" (click)="onRemoveUser(user.id)">
+                Remover
+              </button>
             </td>
           </tr>
         </tbody>
