refatoração de códigos angular e estilização da interface

--- a/frontend/src/app/form/form.component.html
+++ b/frontend/src/app/form/form.component.html
@@ -1,61 +1,100 @@
-<h3>{{ form_title }}</h3>
+<div class="container">
+  <h3>{{ form_title }}</h3>
 
-<form [formGroup]="form">
-  <div class="form-group">
-    <label for="name">Nome</label>
-    <input 
-      type="text" 
-      class="form-control" 
-      id="name" 
-      placeholder="Insira seu nome"
-      formControlName="name">
-  </div>
-  <div class="form-group">
-    <label for="cpf_cnpj">CPF ou CNPJ</label>
-    <input 
-      type="text" 
-      class="form-control" 
-      id="cpf_cnpj" 
-      placeholder="Insira seu CPF ou CNPJ"
-      formControlName="cpf_cnpj"
-      required
-      aria-describedby="cpf_cnpjHelp">
-      <small id="cpf_cnpjHelp" class="form-text text-muted">Nunca vamos compartilhar seu CPF ou CNPJ, com ninguém.</small>
-  </div>
-  <div class="form-group">
-    <label for="address">{{ form_address }}</label>
-    <input 
-      type="text" 
-      class="form-control" 
-      id="address" 
-      placeholder="Insira seu Endereço"
-      formControlName="address">
-      <button type="button" class="btn btn-outline-primary btn-sm" (click)="onAddAddress()">Adicionar outro endereço</button>
+  <form [formGroup]="form">
+    <div class="form-group">
+      <label for="name">Nome</label>
+      <input
+        type="text"
+        class="form-control"
+        id="name"
+        placeholder="Insira seu nome"
+        formControlName="name"
+      />
+    </div>
+    <div class="form-group">
+      <label for="cpf_cnpj">CPF ou CNPJ</label>
+      <input
+        type="text"
+        class="form-control"
+        id="cpf_cnpj"
+        placeholder="Insira seu CPF ou CNPJ"
+        formControlName="cpf_cnpj"
+        required
+        aria-describedby="cpf_cnpjHelp"
+        pattern="[Z0-9]+"
+        minlength=11
+      />
+      <small
+        id="cpf_cnpjHelp"
+        class="form-text text-muted">
+        Nunca vamos compartilhar seu CPF ou CNPJ, com ninguém.
+      </small>
+    </div>
+    <div class="form-group">
+      <label for="address">{{ form_address }}</label>
+      <input
+        type="text"
+        class="form-control"
+        id="address"
+        placeholder="Insira seu Endereço"
+        formControlName="address"
+      />
+      <button
+        type="button"
+        class="btn btn-outline-primary btn-sm"
+        (click)="onAddAddress()">
+        Adicionar outro endereço
+      </button>
       <div class="form-group">
-        <label for="listAddress">Selecione um endereço com principal</label>
-        <select class="form-control" id="listAddress" type="text" (click)="onAddressMain($event)">
-          <option *ngFor="let address of listAddress">{{ address.description }}</option>
+        <label for="listAddress">Selecione um endereço como principal</label>
+        <select
+          class="form-control"
+          id="listAddress"
+          type="text"
+          (click)="onAddressMain($event)">
+          <option *ngFor="let address of list_address">{{ address.description }}</option>
         </select>
       </div>
-</div>
-  <div class="form-group">
-    <label for="telephone">Telefone</label>
-    <input 
-      type="text" 
-      class="form-control" 
-      id="telephone" 
-      placeholder="Insira seu Telefone"
-      formControlName="telephone">
-      <button type="button" class="btn btn-outline-primary btn-sm" (click)="onAddTelephone()">Adicionar outro telefone</button>
+    </div>
+    <div class="form-group">
+      <label for="telephone">Telefone</label>
+      <input
+        type="text"
+        class="form-control"
+        id="telephone"
+        placeholder="Insira seu Telefone"
+        formControlName="telephone"
+        pattern="[Z0-9]+"
+        minlength=8
+      />
+      <button
+        type="button"
+        class="btn btn-outline-primary btn-sm"
+        (click)="onAddTelephone()">
+        Adicionar outro telefone
+      </button>
       <div class="form-group">
         <label for="listTelephone">Telefones já adicionados</label>
         <select multiple class="form-control" id="listTelephone">
-          <option *ngFor="let telephone of listTelephone">{{ telephone }}</option>
+          <option *ngFor="let telephone of list_telephone">{{ telephone }}</option>
         </select>
       </div>
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-success"  [disabled]="!form.valid && !editUser" (click)="onSubmit()">Success</button>
-    <button type="submit" class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
-  </div>
-</form>
+    </div>
+    <div class="form-group">
+      <button
+        type="submit"
+        class="btn btn-success"
+        [disabled]="!form.valid && !edit_user"
+        (click)="onSubmit()">
+        Success
+      </button>
+      <button
+        type="submit"
+        class="btn btn-secondary"
+        (click)="onCancel()">
+        Cancel
+      </button>
+    </div>
+  </form>
+</div>
