--- a/frontend/src/app/carousel/carousel.component.html
+++ b/frontend/src/app/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<carousel [showIndicators]="showIndicator">
+<carousel [showIndicators]="show_indicator">
     <slide *ngFor="let slide of slides; let index=index" class="carousel">
       <img [src]="slide.image" alt="image slide">
     </slide>
