--- a/frontend/src/app/list-users/list-users.component.css
+++ b/frontend/src/app/list-users/list-users.component.css
@@ -1,1 +1,21 @@
+h4 {
+  color: rgb(57, 57, 192);
+}
 
+button {
+  margin-left: 5px;
+}
+
+input {
+  width: 200px;
+  float: right;
+}
+
+.button-form {
+  justify-content: space-around;
+  display: flex;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
