--- a/frontend/src/app/list-users/list-users.component.html
+++ b/frontend/src/app/list-users/list-users.component.html
@@ -19,6 +19,7 @@
       <button
         type="button"
         class="btn btn-info"
+        [disabled]="find_id.length == 0"
         (click)="onFindUserById()">
         Pesquisar
       </button>
