--- a/frontend/src/app/form/form.component.css
+++ b/frontend/src/app/form/form.component.css
@@ -9,3 +9,21 @@ form {
 form button {
     margin: 5px;
 }
+
+input:focus:invalid {
+  border-color: #e88;
+  -webkit-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
+  -moz-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
+  -o-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
+  -ms-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
+  box-shadow:0 0 5px rgba(255, 0, 0, .8);
+}
+
+input:valid {
+  border-color: #88a;
+  -webkit-box-shadow: 0 0 5px rgba(0, 255, 115, 0.5);
+  -moz-box-shadow: 0 0 5px rgba(0, 255, 115, 0.5);
+  -o-box-shadow: 0 0 5px rgba(0, 255, 115, 0.5);
+  -ms-box-shadow: 0 0 5px rgba(0, 255, 115, 0.5);
+  box-shadow: 0 0 5px rgba(0, 255, 115, 0.5);
+}
