formulário de login e senha implementado

--- a/frontend/src/app/carousel/carousel.component.css
+++ b/frontend/src/app/carousel/carousel.component.css
@@ -1,8 +1,9 @@
 slide {
-    height: 350px;
+  height: 400px;
 }
 
 slide img {
-    display: block; 
-    width: 100%;
+  padding-top: 0.2%;
+  position: relative;
+  width: 100%;
 }
