--- a/frontend/src/app/add-user/add-user.component.html
+++ b/frontend/src/app/add-user/add-user.component.html
@@ -1,4 +1,5 @@
+<app-navbar></app-navbar>
 <div class="container">
-    <app-carousel></app-carousel>
-    <app-form></app-form>
+  <app-carousel></app-carousel>
+  <app-form></app-form>
 </div>
