--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,5 @@
+<app-navbar></app-navbar>
 <div class="container">
-    <app-carousel></app-carousel>
-    <app-list-users></app-list-users>
+  <app-carousel></app-carousel>
+  <app-list-users></app-list-users>
 </div>
